translation by tools

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -56,7 +56,7 @@
   "@active": {},
   "active_btc": "Activate BTC",
   "@active_btc": {},
-  "active_node": "激活节点",
+  "active_node": "Initiate the node",
   "@active_node": {},
   "active_still_need": "HYN is needed ",
   "@active_still_need": {},
@@ -118,7 +118,7 @@
   "@amazon_cloud": {},
   "amount": "Amount",
   "@amount": {},
-  "amount_not_be_negative": "amount can not be negative",
+  "amount_not_be_negative": "The amount can not be negative",
   "@amount_not_be_negative": {},
   "annualized_rewards": "APR",
   "@annualized_rewards": {},
@@ -142,7 +142,7 @@
   "@atlas_consensus_node": {},
   "atlas_create_node": "Create an Atlas node",
   "@atlas_create_node": {},
-  "atlas_creator_delegation_little": "self delegation too little",
+  "atlas_creator_delegation_little": "The amount of Atlas delegation is too low",
   "@atlas_creator_delegation_little": {},
   "atlas_current_age": "Current epoch",
   "@atlas_current_age": {},
@@ -158,11 +158,11 @@
   "@atlas_next_age": {},
   "atlas_node": "Atlas Node",
   "@atlas_node": {},
-  "atlas_node_intro": "Atlas网络层由Atlas节点组成，并按照抵押量降序选出88个出块节点进行验证、出块、清算、并获取出块奖励。",
+  "atlas_node_intro": "Atlas nodes make up of Atlas. The 88 block-producing nodes are elected and the rewards will be distributed pro-rata to their delegations after validation, block production and liquidation. ",
   "@atlas_node_intro": {},
-  "atlas_node_list": "Atlas节点列表",
+  "atlas_node_list": "Atlas node list",
   "@atlas_node_list": {},
-  "atlas_node_more_max_delegation": "total delegation can not be bigger than max_total_delegation",
+  "atlas_node_more_max_delegation": "Atlas total delegation exceeds the limits",
   "@atlas_node_more_max_delegation": {},
   "atlas_node_rank": "Rank",
   "@atlas_node_rank": {},
@@ -234,7 +234,7 @@
   "@blockchain_transaction": {},
   "block_height": "Block height",
   "@block_height": {},
-  "block_num_no_provided": "no block number was provided",
+  "block_num_no_provided": "Block height is zero",
   "@block_num_no_provided": {},
   "broadcase_sponsor_wait_net_verify": "Broadcasted delegation {amountDelegation} HYN，waiting for blockchain netowrk to verify",
   "@broadcase_sponsor_wait_net_verify": {},
@@ -268,7 +268,7 @@
   "@cancel_amount": {},
   "cancel_delegate": "Cancel delegation",
   "@cancel_delegate": {},
-  "cancel_delegate_no_atlas_reward_confirm_cancel": "撤销抵押后将不再获得Atlas节点出块奖励，当前为止获得的奖励，将在Atlas节点主领取奖励时发送至您的钱包，撤销之后可以再次抵押，确定要撤销吗？",
+  "cancel_delegate_no_atlas_reward_confirm_cancel": "You won't be rewarded after retrieving your delegation. The reward that you've gained will be sent to your wallet when the initiator claims the rewards. You still can stake your delegation after retrieving it. Are you sure to retrieve it?",
   "@cancel_delegate_no_atlas_reward_confirm_cancel": {},
   "canceling_node": "Canceling",
   "@canceling_node": {},
@@ -288,13 +288,13 @@
   "@cant_cancel_staking": {},
   "cant_cancel_within_7_epoch": "Delegation can't be retrieved in 7 epochs",
   "@cant_cancel_within_7_epoch": {},
-  "cant_receive_reward_contact_master_distribute": "你不能领取节点奖励，你可以联系节点主去领取并分配节点奖励。",
+  "cant_receive_reward_contact_master_distribute": "You can't collect your rewards. Please contact the initiator to collect the rewrds. ",
   "@cant_receive_reward_contact_master_distribute": {},
   "can_use": "Available",
   "@can_use": {},
   "can_withdraw_fifty_reward": "50% rewards available to withdraw",
   "@can_withdraw_fifty_reward": {},
-  "can_withdraw_to_map3": "可提往Map3",
+  "can_withdraw_to_map3": "It can withdraw to Map3",
   "@can_withdraw_to_map3": {},
   "category": "Category",
   "@category": {},
@@ -342,7 +342,7 @@
   "@click_again_to_exist_app": {},
   "click_auto_get_hint": "Click to autofill",
   "@click_auto_get_hint": {},
-  "click_receive": "点击领取",
+  "click_receive": "Click to receive",
   "@click_receive": {},
   "click_refresh": "Click to refresh",
   "@click_refresh": {},
@@ -628,7 +628,7 @@
   "@does_not_exist": {},
   "domestic_video": "Domestic",
   "@domestic_video": {},
-  "dont_join_atlas_no_reward": "你还没有参与该Atlas节点抵押，不可以领取节点奖励。",
+  "dont_join_atlas_no_reward": "You can't collect your rewards as you didn't delegate. ",
   "@dont_join_atlas_no_reward": {},
   "double_check_password_error": "Passwords don't match",
   "@double_check_password_error": {},
@@ -666,7 +666,7 @@
   "@epidemic_map_short": {},
   "epoch": "Epoch",
   "@epoch": {},
-  "epoch_no_provided": "no epoch was provided",
+  "epoch_no_provided": "Epoch is zero",
   "@epoch_no_provided": {},
   "error_code_func": "Error code:{errorCode}",
   "@error_code_func": {},
@@ -912,9 +912,9 @@
   "@false_data_toast": {},
   "false_location_determination": "False POI verification ",
   "@false_location_determination": {},
-  "fee_rate": "费率",
+  "fee_rate": "Fee rate",
   "@fee_rate": {},
-  "fee_rate_trim": "费率幅度",
+  "fee_rate_trim": "Rate range",
   "@fee_rate_trim": {},
   "fingerprint_recognition": "Fingerprint recognition",
   "@fingerprint_recognition": {},
@@ -954,9 +954,9 @@
   "@gas_limit_exceeded_hint": {},
   "gas_limit_reached_hint": "gas limit reached",
   "@gas_limit_reached_hint": {},
-  "gas_limit_too_large": "exceeds block gas limit",
+  "gas_limit_too_large": "Gas fee exceeds the limit",
   "@gas_limit_too_large": {},
-  "gas_price_too_low": "transaction underpriced",
+  "gas_price_too_low": "Gas fee is too low",
   "@gas_price_too_low": {},
   "gas_price_too_low_to_replace_hint": "Gas price too low to replace",
   "@gas_price_too_low_to_replace_hint": {},
@@ -1162,7 +1162,7 @@
   "@introduct_non_secret_payment": {},
   "invalid_map3_status_delegation": "invalid map3 node status for delegation",
   "@invalid_map3_status_delegation": {},
-  "invalid_map3_status_restake": "invalid map3 node status to restake",
+  "invalid_map3_status_restake": "Map3 node status does not allow to restake",
   "@invalid_map3_status_restake": {},
   "invalid_map3_status_undelegate": "invalid map3 node status to unmicrodelegate",
   "@invalid_map3_status_undelegate": {},
@@ -1176,7 +1176,7 @@
   "@invitation_code_error": {},
   "invite_friend_join": "Invite friends to join",
   "@invite_friend_join": {},
-  "is_not_map3_operator": "invalid map3 node operator",
+  "is_not_map3_operator": "invalid map3 node initiator",
   "@is_not_map3_operator": {},
   "isnt_trustwallet_cant_export": "Not TrustWallet，unsupportive to mnemonic",
   "@isnt_trustwallet_cant_export": {},
@@ -1334,7 +1334,7 @@
   "@manage_fee_range": {},
   "manage_fee_setup": "Set a commission",
   "@manage_fee_setup": {},
-  "manage_node_staking": "管理节点抵押",
+  "manage_node_staking": "Manage node staking",
   "@manage_node_staking": {},
   "manager_tip_hyn": "commission fee (HYN)",
   "@manager_tip_hyn": {},
@@ -1344,13 +1344,13 @@
   "@map3_auto_renew_hint": {},
   "map3_create_min_staking": "Create a minimal staking",
   "@map3_create_min_staking": {},
-  "map3_creator_delegation_too_small": "Map3创建者抵押金额太低",
+  "map3_creator_delegation_too_small": "The amount of Map3 delegation is too low",
   "@map3_creator_delegation_too_small": {},
   "map3_delegate_amount_hint": " {startMin}HYN are required before initiating. Each delegation is not less{delegateMin}HYN",
   "@map3_delegate_amount_hint": {},
-  "map3_delegation_no_exist": "microdelegation does not exist",
+  "map3_delegation_no_exist": "Map3 microdelegation does not exist",
   "@map3_delegation_no_exist": {},
-  "map3_delegation_still_locked": "microdelegation still locked",
+  "map3_delegation_still_locked": "Map3 microdelegation is still locked",
   "@map3_delegation_still_locked": {},
   "map3_global_nodes": "Dashboard",
   "@map3_global_nodes": {},
@@ -1358,7 +1358,7 @@
   "@map3_introduce_title": {},
   "map3_introduction": " Map3 node staking has been open to all. Service and security will be enhanced by initiating or delegating a Map3 node. Participants will be rewarded pro rata to their staking after it's expired. ",
   "@map3_introduction": {},
-  "map3_is_mortgaged": "Map3已抵押",
+  "map3_is_mortgaged": "Map3 has been staked",
   "@map3_is_mortgaged": {},
   "map3_main_page_title": "Map3 nodes",
   "@map3_main_page_title": {},
@@ -1374,7 +1374,7 @@
   "@map3_node_identity_exists": {},
   "map3_node_introduction": "Map3",
   "@map3_node_introduction": {},
-  "map3_node_key_exists": "map3 node key exists",
+  "map3_node_key_exists": "Map3 BLS key is duplicate",
   "@map3_node_key_exists": {},
   "map3_node_no_exist": "map3 node does not exist",
   "@map3_node_no_exist": {},
@@ -1382,7 +1382,7 @@
   "@map3_nodes": {},
   "map3_nodes_v1": "Map3 node（v1.0）",
   "@map3_nodes_v1": {},
-  "map3_not_renewal_any_more": "map3 node not renewal any more",
+  "map3_not_renewal_any_more": "map3 node does not renewal",
   "@map3_not_renewal_any_more": {},
   "map3_not_to_terminate": "not allow to terminate map3 node",
   "@map3_not_to_terminate": {},
@@ -1410,9 +1410,9 @@
   "@map_provide_stable_server": {},
   "map_smart_contract_management": "Manage Map3 smart contract",
   "@map_smart_contract_management": {},
-  "max_fee_rate": "最大费率",
+  "max_fee_rate": "Max. fee",
   "@max_fee_rate": {},
-  "max_staking_num": "最大抵押量",
+  "max_staking_num": "Max. delegation",
   "@max_staking_num": {},
   "medium": "Medium",
   "@medium": {},
@@ -1464,7 +1464,7 @@
   "@msg_terminate_map3": {},
   "msg_un_micro_delegate": "Withdraw partial delegation",
   "@msg_un_micro_delegate": {},
-  "my_atlas_nodes": "我的Atlas节点",
+  "my_atlas_nodes": "My Atlas nodes",
   "@my_atlas_nodes": {},
   "my_contract": "Map3 node",
   "@my_contract": {},
@@ -1476,9 +1476,9 @@
   "@my_join_map_contract": {},
   "my_location": "My Location",
   "@my_location": {},
-  "my_map3": "我的Map3",
+  "my_map3": "My Map3",
   "@my_map3": {},
-  "my_map3_nodes": "我的Map3节点",
+  "my_map3_nodes": "My Map3 nodes",
   "@my_map3_nodes": {},
   "my_nodes": "My node",
   "@my_nodes": {},
@@ -1602,7 +1602,7 @@
   "@node_amount": {},
   "node_contract_detail": "Details of node staking contract",
   "@node_contract_detail": {},
-  "node_cumulative_reward": "节点累计奖励",
+  "node_cumulative_reward": "Cumulative node reward",
   "@node_cumulative_reward": {},
   "node_had_stop": "Node stopped",
   "@node_had_stop": {},
@@ -1610,7 +1610,7 @@
   "@node_half_revenue_had_withdraw": {},
   "node_in_configuration": "Node in configuration",
   "@node_in_configuration": {},
-  "node_info": "节点信息",
+  "node_info": "Node info",
   "@node_info": {},
   "node_in_progress": "node running",
   "@node_in_progress": {},
@@ -1618,7 +1618,7 @@
   "@node_is_running": {},
   "node_location": "Node location",
   "@node_location": {},
-  "node_master_reactivate_contact_master": "只有节点主才能重新激活节点，请联系节点主激活",
+  "node_master_reactivate_contact_master": "Only the initiator can reinitiate the node. Please contact the initiator",
   "@node_master_reactivate_contact_master": {},
   "node_mortgage_contract": "Map3 node contract",
   "@node_mortgage_contract": {},
@@ -1630,7 +1630,7 @@
   "@node_not_exist_hint": {},
   "node_num": "Node number",
   "@node_num": {},
-  "node_record_empty": "节点记录为空",
+  "node_record_empty": "No record",
   "@node_record_empty": {},
   "node_return_had_withdraw_finish": "delegation refund completed",
   "@node_return_had_withdraw_finish": {},
@@ -1696,7 +1696,7 @@
   "@not_allow_to_delegate_in_unpending_state_hint": {},
   "not_change_renewal_decision": "not allow to change renewal decision",
   "@not_change_renewal_decision": {},
-  "not_edit_terminated_map3": "not allow to edit terminated map3 node",
+  "not_edit_terminated_map3": "not allow to edit expired map3 node",
   "@not_edit_terminated_map3": {},
   "not_equal_to_remaining_delegation_hint": "not equal to remaining delegation",
   "@not_equal_to_remaining_delegation_hint": {},
@@ -1730,7 +1730,7 @@
   "@official_announcement": {},
   "official_website": "Official Website",
   "@official_website": {},
-  "ok": "好的",
+  "ok": "OK",
   "@ok": {},
   "old_map3": "Old Map3",
   "@old_map3": {},
@@ -1952,11 +1952,11 @@
   "@punch_card_completed_came_tomorrow": {},
   "qrcode": "QR Code",
   "@qrcode": {},
-  "reactivate": "重新激活",
+  "reactivate": "Reinitiate",
   "@reactivate": {},
-  "reason_obstacles_sign_rate_withdrawn_mortgage": "(可能的原因是设备运行障碍/设备出块签名率低/节点主已经退出抵押)",
+  "reason_obstacles_sign_rate_withdrawn_mortgage": "Possible reason is device error/low signature rate/the initiator retrives his delegations",
   "@reason_obstacles_sign_rate_withdrawn_mortgage": {},
-  "receive": "领取",
+  "receive": "Receive",
   "@receive": {},
   "receive_an_encrypted_message": "You have received an encrypted location, open it?",
   "@receive_an_encrypted_message": {},
@@ -1970,7 +1970,7 @@
   "@receiver_address_not_empty_hint": {},
   "receiver_encrypted_address": "receiver encrypted address(public key)",
   "@receiver_encrypted_address": {},
-  "receive_reward": "领取奖励",
+  "receive_reward": "Receive rewards",
   "@receive_reward": {},
   "receiver_symbol": "Receive {symbol}",
   "@receiver_symbol": {},
@@ -2018,7 +2018,7 @@
   "@renew_contract": {},
   "renew_contract_ing": "Renew contract",
   "@renew_contract_ing": {},
-  "replacement_transaction_underpriced": "replacement transaction underpriced",
+  "replacement_transaction_underpriced": "Gas fee for replaced transaction is too low",
   "@replacement_transaction_underpriced": {},
   "require_location": "Enable your location data",
   "@require_location": {},
@@ -2152,7 +2152,7 @@
   "@send": {},
   "send_count_label": "{symbol} Quantity",
   "@send_count_label": {},
-  "sender_signature_error": "invalid sender",
+  "sender_signature_error": "invalid sender signature",
   "@sender_signature_error": {},
   "send_symbol": "Send {symbol}",
   "@send_symbol": {},
@@ -2216,7 +2216,7 @@
   "@signal_total_data": {},
   "skip": "Skip",
   "@skip": {},
-  "slot_keys_was_duplicates": "slot keys can not have duplicates",
+  "slot_keys_was_duplicates": "BLS Key is duplicate",
   "@slot_keys_was_duplicates": {},
   "software_agreement": "Software agreement",
   "@software_agreement": {},
@@ -2232,7 +2232,7 @@
   "@spend_manager_hyn": {},
   "sponsor": "Initiator",
   "@sponsor": {},
-  "staking": "抵押",
+  "staking": "Stake",
   "@staking": {},
   "start_encryption": "Encrypt",
   "@start_encryption": {},
@@ -2258,7 +2258,7 @@
   "@swipe_left_and_right_title": {},
   "switch_contribute_address": "Switch",
   "@switch_contribute_address": {},
-  "switch_view_different_map3_staking_status": "(切换查看不同Map3节点抵押情况)",
+  "switch_view_different_map3_staking_status": "Switch to view different Map3 staking status",
   "@switch_view_different_map3_staking_status": {},
   "symptoms": "Any symptoms",
   "@symptoms": {},
@@ -2302,7 +2302,7 @@
   "@ten_thousand_annualizedyield": {},
   "terminate_node": "Suspend node",
   "@terminate_node": {},
-  "this_atlas_node_is_inactive": "该Atlas节点处于非活跃状态",
+  "this_atlas_node_is_inactive": "Inactive Atlas node",
   "@this_atlas_node_is_inactive": {},
   "throughout_of_day": "All day（24 hours）",
   "@throughout_of_day": {},
@@ -2334,7 +2334,7 @@
   "@touch_id_not_available_try_again": {},
   "tourist_attraction": "Tourist attraction",
   "@tourist_attraction": {},
-  "transaction_contained_within_pool": "already known",
+  "transaction_contained_within_pool": "The transaction is in the list. ",
   "@transaction_contained_within_pool": {},
   "transaction_detail_state_func": "Confirm {transactionDetailState} times",
   "@transaction_detail_state_func": {},
@@ -2436,11 +2436,11 @@
   "@user_policy": {},
   "user_this_account": "Use this private wallet",
   "@user_this_account": {},
-  "validator_address_not_equal_map3_restaked": "validator address not equal to the address of the validator map3 already restaked to",
+  "validator_address_not_equal_map3_restaked": "Atlas validator address does not match the address of the validator map3 already restaked to",
   "@validator_address_not_equal_map3_restaked": {},
   "validator_identity_exists": "validator identity exists",
   "@validator_identity_exists": {},
-  "validator_not_exist": "validator does not exist",
+  "validator_not_exist": "Atlas validator does not exist",
   "@validator_not_exist": {},
   "verification_code_error": "verification code incorrect",
   "@verification_code_error": {},
@@ -2550,7 +2550,7 @@
   "@whether_above_picture_real_picture_of_the_place_toast": {},
   "withdrawal": "Withdraw",
   "@withdrawal": {},
-  "withdraw_atlas_reward_staking_rate_distribute": "你将提取当前Atlas奖励，奖励会按照抵押比率分配到你的Map3节点抵押者。",
+  "withdraw_atlas_reward_staking_rate_distribute": "You're going to collect current rewards. It will be distributed pro-rata to Map3 delegators. ",
   "@withdraw_atlas_reward_staking_rate_distribute": {},
   "withdraw_fifty_revenue": "Withdraw 50% rewards",
   "@withdraw_fifty_revenue": {},
@@ -2576,7 +2576,7 @@
   "@you_incorrectly_verified_place_you_submitted": {},
   "your_answer": "Your answer",
   "@your_answer": {},
-  "your_device_normal_reactivate_node": "，如果你的设备已经恢复正常运行，请重新激活该节点。",
+  "your_device_normal_reactivate_node": "If your device runs normally, please reinitiate the node",
   "@your_device_normal_reactivate_node": {},
   "your_last_input_to_contract_func": "Your latest delegation：{input}, {task_pending}",
   "@your_last_input_to_contract_func": {},
