[Update] update translations

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1342,16 +1342,32 @@
   "@manually_refresh": {},
   "map3_auto_renew_hint": "Auto-renewal is default；or you can turn on or off auto-renewal function 7-14 epochs before expired",
   "@map3_auto_renew_hint": {},
+  "map3_cancel_doing": "",
+  "@map3_cancel_doing": {},
+  "map3_collect_doing": "",
+  "@map3_collect_doing": {},
+  "map3_collect_in_atlas_doing": "",
+  "@map3_collect_in_atlas_doing": {},
   "map3_create_min_staking": "Create a minimal staking",
   "@map3_create_min_staking": {},
   "map3_creator_delegation_too_small": "The amount of Map3 delegation is too low",
   "@map3_creator_delegation_too_small": {},
   "map3_delegate_amount_hint": " {startMin}HYN are required before initiating. Each delegation is not less{delegateMin}HYN",
   "@map3_delegate_amount_hint": {},
+  "map3_delegate_doing": "",
+  "@map3_delegate_doing": {},
   "map3_delegation_no_exist": "Map3 microdelegation does not exist",
   "@map3_delegation_no_exist": {},
   "map3_delegation_still_locked": "Map3 microdelegation is still locked",
   "@map3_delegation_still_locked": {},
+  "map3_edit_doing": "",
+  "@map3_edit_doing": {},
+  "map3_end_done": "",
+  "@map3_end_done": {},
+  "map3_exit_doing": "",
+  "@map3_exit_doing": {},
+  "map3_exit_done": "",
+  "@map3_exit_done": {},
   "map3_global_nodes": "Dashboard",
   "@map3_global_nodes": {},
   "map3_introduce_title": "What’s Map3 node?",
@@ -1382,12 +1398,30 @@
   "@map3_nodes": {},
   "map3_nodes_v1": "Map3 node（v1.0）",
   "@map3_nodes_v1": {},
+  "map3_notification_expired": "",
+  "@map3_notification_expired": {},
+  "map3_notification_expired_left_epoch": "",
+  "@map3_notification_expired_left_epoch": {},
+  "map3_notification_left_epoch": "",
+  "@map3_notification_left_epoch": {},
+  "map3_notification_redelegate": "",
+  "@map3_notification_redelegate": {},
   "map3_not_renewal_any_more": "map3 node does not renewal",
   "@map3_not_renewal_any_more": {},
   "map3_not_to_terminate": "not allow to terminate map3 node",
   "@map3_not_to_terminate": {},
+  "map3_pending_delegate_full": "",
+  "@map3_pending_delegate_full": {},
   "map3_pre_edit_next_epoch": " The initiator shall make renewal decision and set a new commission in the second last week before node expiration. Delegators shall decide whether to follow or not in the last week before node expiration. ",
   "@map3_pre_edit_next_epoch": {},
+  "map3_re_delegate_doing": "",
+  "@map3_re_delegate_doing": {},
+  "map3_refresh_data": "",
+  "@map3_refresh_data": {},
+  "map3_renew_doing": "",
+  "@map3_renew_doing": {},
+  "map3_un_re_delegate_doing": "",
+  "@map3_un_re_delegate_doing": {},
   "map_contract_execution": "Execute Map3 contract",
   "@map_contract_execution": {},
   "map_dmap": "Map DMap",
