--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -1342,16 +1342,32 @@
   "@manually_refresh": {},
   "map3_auto_renew_hint": "创建后默认是到期自动续约以获得等多奖励；你也可以在到期前7-14纪元关闭或开启自动续约开关",
   "@map3_auto_renew_hint": {},
+  "map3_cancel_doing": "部分撤销{amount}HYN请求处理中...",
+  "@map3_cancel_doing": {},
+  "map3_collect_doing": "提取请求处理中...",
+  "@map3_collect_doing": {},
+  "map3_collect_in_atlas_doing": "提取Atlas奖励请求处理中...",
+  "@map3_collect_in_atlas_doing": {},
   "map3_create_min_staking": "创建最低抵押",
   "@map3_create_min_staking": {},
   "map3_creator_delegation_too_small": "Map3创建者抵押金额太低",
   "@map3_creator_delegation_too_small": {},
   "map3_delegate_amount_hint": "需要总抵押满{startMin}HYN才能正式启动，每次参与抵押数额不少于{delegateMin}HYN",
   "@map3_delegate_amount_hint": {},
+  "map3_delegate_doing": "抵押{amount}HYN请求处理中...",
+  "@map3_delegate_doing": {},
   "map3_delegation_no_exist": "Map3抵押不存在",
   "@map3_delegation_no_exist": {},
   "map3_delegation_still_locked": "Map3抵押仍在锁定周期",
   "@map3_delegation_still_locked": {},
+  "map3_edit_doing": "编辑请求处理中...",
+  "@map3_edit_doing": {},
+  "map3_end_done": "节点已到期，将在下个纪元结算",
+  "@map3_end_done": {},
+  "map3_exit_doing": "终止请求处理中...",
+  "@map3_exit_doing": {},
+  "map3_exit_done": "节点已终止，抵押金额已返回您的钱包",
+  "@map3_exit_done": {},
   "map3_global_nodes": "数据展示",
   "@map3_global_nodes": {},
   "map3_introduce_title": "Map3节点介绍",
@@ -1382,12 +1398,30 @@
   "@map3_nodes": {},
   "map3_nodes_v1": "Map3节点（v1.0）",
   "@map3_nodes_v1": {},
+  "map3_notification_expired": "节点主已经停止续约，该节点到期后自动终止",
+  "@map3_notification_expired": {},
+  "map3_notification_expired_left_epoch": "距离到期还需{_endRemainEpochValue}纪元",
+  "@map3_notification_expired_left_epoch": {},
+  "map3_notification_left_epoch": "距离可以设置下期续约还需{leftEpoch}纪元",
+  "@map3_notification_left_epoch": {},
+  "map3_notification_redelegate": "请节点主尽快复抵押至atlas节点以享受出块奖励！",
+  "@map3_notification_redelegate": {},
   "map3_not_renewal_any_more": "该节点不再续期",
   "@map3_not_renewal_any_more": {},
   "map3_not_to_terminate": "不允许中止Map3节点",
   "@map3_not_to_terminate": {},
+  "map3_pending_delegate_full": "抵押已满{startMinValue}，将在下个纪元启动...",
+  "@map3_pending_delegate_full": {},
   "map3_pre_edit_next_epoch": "节点主在到期前倒数第二周设置下一周期是否继续运行，或调整管理费率。抵押者在到期前最后一周可选择是否跟随下一周期",
   "@map3_pre_edit_next_epoch": {},
+  "map3_re_delegate_doing": "复抵押请求处理中...",
+  "@map3_re_delegate_doing": {},
+  "map3_refresh_data": "数据刷新中...",
+  "@map3_refresh_data": {},
+  "map3_renew_doing": "续约请求处理中...",
+  "@map3_renew_doing": {},
+  "map3_un_re_delegate_doing": "取消复抵押请求处理中...",
+  "@map3_un_re_delegate_doing": {},
   "map_contract_execution": "MAP3合约调用",
   "@map_contract_execution": {},
   "map_dmap": "地图DMap",
