--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -858,7 +858,7 @@
   "kline_state_secondary": "보조 사진",
   "kline_delegate_buy": "구매",
   "kline_delegate_sell": "판매 주문",
-  "kline_delegate_amount": "금액 (HYN)",
+  "kline_delegate_amount": "금액",
   "kline_delegate_price": "가격 (USDT)",
   "kline_delegate_time": "시간",
   "kline_delegate_direction": "방향",
