--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -858,7 +858,7 @@
   "kline_state_secondary": "副圖",
   "kline_delegate_buy": "買盤",
   "kline_delegate_sell": "賣盤",
-  "kline_delegate_amount": "數量(HYN)",
+  "kline_delegate_amount": "數量",
   "kline_delegate_price": "價格(USDT)",
   "kline_delegate_time": "時間",
   "kline_delegate_direction": "方向",
