--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -502,12 +502,16 @@
   "@creator": {},
   "current_commission": "当前委托",
   "@current_commission": {},
+  "current_management_fee": "当前管理费",
+  "@current_management_fee": {},
   "current_reward": "当前奖励",
   "@current_reward": {},
   "current_reward_zero": "当前可提奖励为零!",
   "@current_reward_zero": {},
   "current_staking": "当前抵押",
   "@current_staking": {},
+  "current_withdrawal_amount_zero": "当前可提金额为0",
+  "@current_withdrawal_amount_zero": {},
   "cycling": "骑行",
   "@cycling": {},
   "dapp_setting": "DApp设置",
@@ -666,6 +670,8 @@
   "@epidemic_map_short": {},
   "epoch": "纪元",
   "@epoch": {},
+  "epoch_management_fee_trim": "单纪元可调管理费幅度",
+  "@epoch_management_fee_trim": {},
   "epoch_no_provided": "纪元为空",
   "@epoch_no_provided": {},
   "error_code_func": "错误码:{errorCode}",
@@ -900,7 +906,7 @@
   "@failed_to_bind_wallet_please_exit_task_and_try_again_toast": {},
   "failed_to_post_confirm_data_to_be_verified_error_code": "提交验证数据失败",
   "@failed_to_post_confirm_data_to_be_verified_error_code": {},
-  "failed_to_post_confirm_data_to_be_verified_error_code_toast": "提交验证数据失败, 错误码:${code}",
+  "failed_to_post_confirm_data_to_be_verified_error_code_toast": "提交验证数据失败, 错误码:{code}",
   "@failed_to_post_confirm_data_to_be_verified_error_code_toast": {},
   "failed_to_request_data_to_be_verified_error_code_toast": "请求待验证数据失败！",
   "@failed_to_request_data_to_be_verified_error_code_toast": {},
@@ -1400,7 +1406,7 @@
   "@map3_nodes_v1": {},
   "map3_notification_expired": "节点主已经停止续约，该节点到期后自动终止",
   "@map3_notification_expired": {},
-  "map3_notification_expired_left_epoch": "距离到期还需{_endRemainEpochValue}纪元",
+  "map3_notification_expired_left_epoch": "距离到期还需{endRemainEpochValue}纪元",
   "@map3_notification_expired_left_epoch": {},
   "map3_notification_left_epoch": "距离可以设置下期续约还需{leftEpoch}纪元",
   "@map3_notification_left_epoch": {},
@@ -2210,6 +2216,8 @@
   "@set_bio_auth_success": {},
   "setting": "设置",
   "@setting": {},
+  "setting_max_management_fee": "可设最高管理费",
+  "@setting_max_management_fee": {},
   "setting_payment_password": "请设置支付密码",
   "@setting_payment_password": {},
   "share": "分享",
