--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -502,12 +502,16 @@
   "@creator": {},
   "current_commission": "Current Order",
   "@current_commission": {},
+  "current_management_fee": "",
+  "@current_management_fee": {},
   "current_reward": "Current reward",
   "@current_reward": {},
   "current_reward_zero": "Current reward is Null!",
   "@current_reward_zero": {},
   "current_staking": "Current staking",
   "@current_staking": {},
+  "current_withdrawal_amount_zero": "",
+  "@current_withdrawal_amount_zero": {},
   "cycling": "Cycling",
   "@cycling": {},
   "dapp_setting": "DApp Settings",
@@ -666,6 +670,8 @@
   "@epidemic_map_short": {},
   "epoch": "Epoch",
   "@epoch": {},
+  "epoch_management_fee_trim": "",
+  "@epoch_management_fee_trim": {},
   "epoch_no_provided": "Epoch is zero",
   "@epoch_no_provided": {},
   "error_code_func": "Error code:{errorCode}",
@@ -1342,7 +1348,7 @@
   "@manually_refresh": {},
   "map3_auto_renew_hint": "Auto-renewal is default；or you can turn on or off auto-renewal function 7-14 epochs before expired",
   "@map3_auto_renew_hint": {},
-  "map3_cancel_doing": "",
+  "map3_cancel_doing": "部分撤销{amount}HYN请求处理中...",
   "@map3_cancel_doing": {},
   "map3_collect_doing": "",
   "@map3_collect_doing": {},
@@ -1354,7 +1360,7 @@
   "@map3_creator_delegation_too_small": {},
   "map3_delegate_amount_hint": " {startMin}HYN are required before initiating. Each delegation is not less{delegateMin}HYN",
   "@map3_delegate_amount_hint": {},
-  "map3_delegate_doing": "",
+  "map3_delegate_doing": "抵押{amount}HYN请求处理中...",
   "@map3_delegate_doing": {},
   "map3_delegation_no_exist": "Map3 microdelegation does not exist",
   "@map3_delegation_no_exist": {},
@@ -1400,9 +1406,9 @@
   "@map3_nodes_v1": {},
   "map3_notification_expired": "",
   "@map3_notification_expired": {},
-  "map3_notification_expired_left_epoch": "",
+  "map3_notification_expired_left_epoch": "距离到期还需{endRemainEpochValue}纪元",
   "@map3_notification_expired_left_epoch": {},
-  "map3_notification_left_epoch": "",
+  "map3_notification_left_epoch": "距离可以设置下期续约还需{leftEpoch}纪元",
   "@map3_notification_left_epoch": {},
   "map3_notification_redelegate": "",
   "@map3_notification_redelegate": {},
@@ -1410,7 +1416,7 @@
   "@map3_not_renewal_any_more": {},
   "map3_not_to_terminate": "not allow to terminate map3 node",
   "@map3_not_to_terminate": {},
-  "map3_pending_delegate_full": "",
+  "map3_pending_delegate_full": "抵押已满{startMinValue}，将在下个纪元启动...",
   "@map3_pending_delegate_full": {},
   "map3_pre_edit_next_epoch": " The initiator shall make renewal decision and set a new commission in the second last week before node expiration. Delegators shall decide whether to follow or not in the last week before node expiration. ",
   "@map3_pre_edit_next_epoch": {},
@@ -2210,6 +2216,8 @@
   "@set_bio_auth_success": {},
   "setting": "Setting",
   "@setting": {},
+  "setting_max_management_fee": "",
+  "@setting_max_management_fee": {},
   "setting_payment_password": "Please set a payment password",
   "@setting_payment_password": {},
   "share": "Share",
