--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -502,12 +502,16 @@
   "@creator": {},
   "current_commission": "当前委托",
   "@current_commission": {},
+  "current_management_fee": "",
+  "@current_management_fee": {},
   "current_reward": "当前奖励",
   "@current_reward": {},
   "current_reward_zero": "当前可提奖励为零!",
   "@current_reward_zero": {},
   "current_staking": "当前抵押",
   "@current_staking": {},
+  "current_withdrawal_amount_zero": "",
+  "@current_withdrawal_amount_zero": {},
   "cycling": "騎行",
   "@cycling": {},
   "dapp_setting": "DApp設置",
@@ -666,6 +670,8 @@
   "@epidemic_map_short": {},
   "epoch": "纪元",
   "@epoch": {},
+  "epoch_management_fee_trim": "",
+  "@epoch_management_fee_trim": {},
   "epoch_no_provided": "纪元为空",
   "@epoch_no_provided": {},
   "error_code_func": "錯誤碼:{errorCode}",
@@ -900,7 +906,7 @@
   "@failed_to_bind_wallet_please_exit_task_and_try_again_toast": {},
   "failed_to_post_confirm_data_to_be_verified_error_code": "提交驗證數據失敗",
   "@failed_to_post_confirm_data_to_be_verified_error_code": {},
-  "failed_to_post_confirm_data_to_be_verified_error_code_toast": "提交驗證數據失敗, 錯誤碼:${code}",
+  "failed_to_post_confirm_data_to_be_verified_error_code_toast": "提交驗證數據失敗, 錯誤碼:{code}",
   "@failed_to_post_confirm_data_to_be_verified_error_code_toast": {},
   "failed_to_request_data_to_be_verified_error_code_toast": "請求待驗證數據失敗！",
   "@failed_to_request_data_to_be_verified_error_code_toast": {},
@@ -1342,7 +1348,7 @@
   "@manually_refresh": {},
   "map3_auto_renew_hint": "创建后默认是到期自动续约以获得等多奖励；你也可以在到期前7-14纪元关闭或开启自动续约开关",
   "@map3_auto_renew_hint": {},
-  "map3_cancel_doing": "",
+  "map3_cancel_doing": "部分撤销{amount}HYN请求处理中...",
   "@map3_cancel_doing": {},
   "map3_collect_doing": "",
   "@map3_collect_doing": {},
@@ -1354,7 +1360,7 @@
   "@map3_creator_delegation_too_small": {},
   "map3_delegate_amount_hint": "需要总抵押满{startMin}HYN才能正式启动，每次参与抵押数额不少于{delegateMin}HYN",
   "@map3_delegate_amount_hint": {},
-  "map3_delegate_doing": "",
+  "map3_delegate_doing": "抵押{amount}HYN请求处理中...",
   "@map3_delegate_doing": {},
   "map3_delegation_no_exist": "Map3抵押不存在",
   "@map3_delegation_no_exist": {},
@@ -1400,9 +1406,9 @@
   "@map3_nodes_v1": {},
   "map3_notification_expired": "",
   "@map3_notification_expired": {},
-  "map3_notification_expired_left_epoch": "",
+  "map3_notification_expired_left_epoch": "距离到期还需{endRemainEpochValue}纪元",
   "@map3_notification_expired_left_epoch": {},
-  "map3_notification_left_epoch": "",
+  "map3_notification_left_epoch": "距离可以设置下期续约还需{leftEpoch}纪元",
   "@map3_notification_left_epoch": {},
   "map3_notification_redelegate": "",
   "@map3_notification_redelegate": {},
@@ -1410,7 +1416,7 @@
   "@map3_not_renewal_any_more": {},
   "map3_not_to_terminate": "不允许中止Map3节点",
   "@map3_not_to_terminate": {},
-  "map3_pending_delegate_full": "",
+  "map3_pending_delegate_full": "抵押已满{startMinValue}，将在下个纪元启动...",
   "@map3_pending_delegate_full": {},
   "map3_pre_edit_next_epoch": "节点主在到期前倒数第二周设置下一周期是否继续运行，或调整管理费率。抵押者在到期前最后一周可选择是否跟随下一周期",
   "@map3_pre_edit_next_epoch": {},
@@ -2210,6 +2216,8 @@
   "@set_bio_auth_success": {},
   "setting": "設置",
   "@setting": {},
+  "setting_max_management_fee": "",
+  "@setting_max_management_fee": {},
   "setting_payment_password": "請設置支付密碼",
   "@setting_payment_password": {},
   "share": "分享",
