add atlas translation

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -98,6 +98,8 @@
   "@add_share_options": {},
   "advanced_mode": "advanced mode",
   "@advanced_mode": {},
+  "after_staking_next_epoch_income": "",
+  "@after_staking_next_epoch_income": {},
   "agree": "Agree",
   "@agree": {},
   "agree_and_continue": "Agree and continue",
@@ -486,6 +488,8 @@
   "@create_now": {},
   "create_or_import_wallet_first": "Create/import wallet first",
   "@create_or_import_wallet_first": {},
+  "create_start_map3_stake_atlas_reward": "",
+  "@create_start_map3_stake_atlas_reward": {},
   "create_time": "When created",
   "@create_time": {},
   "create_wallet": "Create New Wallet",
@@ -2176,6 +2180,8 @@
   "@selecte_confirmed_position": {},
   "selected_area": "Select region",
   "@selected_area": {},
+  "select_map3_node_need_staking": "",
+  "@select_map3_node_need_staking": {},
   "select_picture": "Select Picture",
   "@select_picture": {},
   "select_position": "Select position",
@@ -2274,8 +2280,14 @@
   "@spend_manager_hyn": {},
   "sponsor": "Initiator",
   "@sponsor": {},
+  "stake_staked_map3_atlas_reward": "",
+  "@stake_staked_map3_atlas_reward": {},
   "staking": "Stake",
   "@staking": {},
+  "staking_atlas_need_unstaking_map3_follow_operation": "",
+  "@staking_atlas_need_unstaking_map3_follow_operation": {},
+  "staking_atlas_node": "",
+  "@staking_atlas_node": {},
   "start_encryption": "Encrypt",
   "@start_encryption": {},
   "start_navigation_tips": "Welcome to use the Hyperion map to start navigation",
@@ -2452,6 +2464,8 @@
   "@unlock_decrypted_location": {},
   "unlock_remain_epoch": "Remain lockup period: {remain}epoch",
   "@unlock_remain_epoch": {},
+  "unstaking_next_epoch_effect_continue_yield": "",
+  "@unstaking_next_epoch_effect_continue_yield": {},
   "unsupported_image_formats_will_be_removed_selected_toast": "Unsupported picture format will be removed",
   "@unsupported_image_formats_will_be_removed_selected_toast": {},
   "update_error": "Update error",
