--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -98,6 +98,8 @@
   "@add_share_options": {},
   "advanced_mode": "고급 모드",
   "@advanced_mode": {},
+  "after_staking_next_epoch_income": "",
+  "@after_staking_next_epoch_income": {},
   "agree": "동의",
   "@agree": {},
   "agree_and_continue": "Agree and continue",
@@ -486,6 +488,8 @@
   "@create_now": {},
   "create_or_import_wallet_first": "지갑 계정 새로 만들기/가져오기",
   "@create_or_import_wallet_first": {},
+  "create_start_map3_stake_atlas_reward": "",
+  "@create_start_map3_stake_atlas_reward": {},
   "create_time": "생성 시간",
   "@create_time": {},
   "create_wallet": "새 지갑 생성",
@@ -2176,6 +2180,8 @@
   "@selecte_confirmed_position": {},
   "selected_area": "선택된 지역",
   "@selected_area": {},
+  "select_map3_node_need_staking": "",
+  "@select_map3_node_need_staking": {},
   "select_picture": "选择图片",
   "@select_picture": {},
   "select_position": "위치 선택",
@@ -2274,8 +2280,14 @@
   "@spend_manager_hyn": {},
   "sponsor": "스폰서",
   "@sponsor": {},
+  "stake_staked_map3_atlas_reward": "",
+  "@stake_staked_map3_atlas_reward": {},
   "staking": "抵押",
   "@staking": {},
+  "staking_atlas_need_unstaking_map3_follow_operation": "",
+  "@staking_atlas_need_unstaking_map3_follow_operation": {},
+  "staking_atlas_node": "",
+  "@staking_atlas_node": {},
   "start_encryption": "암호화 시작",
   "@start_encryption": {},
   "start_navigation_tips": "해버리안 지도로 네비게이션을 시작한것을 환영합니다.",
@@ -2452,6 +2464,8 @@
   "@unlock_decrypted_location": {},
   "unlock_remain_epoch": "Remain lockup period: {remain}epoch",
   "@unlock_remain_epoch": {},
+  "unstaking_next_epoch_effect_continue_yield": "",
+  "@unstaking_next_epoch_effect_continue_yield": {},
   "unsupported_image_formats_will_be_removed_selected_toast": "지원하지 않는 사진 격식은 삭제 선택됩니다.",
   "@unsupported_image_formats_will_be_removed_selected_toast": {},
   "update_error": "업데이트 오류가 발생했습니다.",
