--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -98,6 +98,8 @@
   "@add_share_options": {},
   "advanced_mode": "高级模式",
   "@advanced_mode": {},
+  "after_staking_next_epoch_income": "抵押后下一个纪元当选才会产生收益",
+  "@after_staking_next_epoch_income": {},
   "agree": "同意",
   "@agree": {},
   "agree_and_continue": "同意并继续",
@@ -486,6 +488,8 @@
   "@create_now": {},
   "create_or_import_wallet_first": "请先创建/导入钱包",
   "@create_or_import_wallet_first": {},
+  "create_start_map3_stake_atlas_reward": "1、创建并启动一个Map3节点，然后抵押到Atlas节点并享受节点出块奖励",
+  "@create_start_map3_stake_atlas_reward": {},
   "create_time": "创建时间",
   "@create_time": {},
   "create_wallet": "创建新钱包",
@@ -2176,6 +2180,8 @@
   "@selecte_confirmed_position": {},
   "selected_area": "选择地区",
   "@selected_area": {},
+  "select_map3_node_need_staking": "选择需要抵押的Map3节点",
+  "@select_map3_node_need_staking": {},
   "select_picture": "选择图片",
   "@select_picture": {},
   "select_position": "选择位置",
@@ -2274,8 +2280,14 @@
   "@spend_manager_hyn": {},
   "sponsor": "发起人",
   "@sponsor": {},
+  "stake_staked_map3_atlas_reward": "2、抵押一个已经抵押到Atlas节点的Map3节点，这样也能享受到Atlas区块出块的奖励",
+  "@stake_staked_map3_atlas_reward": {},
   "staking": "抵押",
   "@staking": {},
+  "staking_atlas_need_unstaking_map3_follow_operation": "抵押Atlas节点，你需要先拥有未抵押的Map3节点，现在你可以进行以下操作参与抵押Atlas节点：",
+  "@staking_atlas_need_unstaking_map3_follow_operation": {},
+  "staking_atlas_node": "抵押Atlas节点",
+  "@staking_atlas_node": {},
   "start_encryption": "加密分享",
   "@start_encryption": {},
   "start_navigation_tips": "欢迎您使用海伯利安地图，开始导航",
@@ -2452,6 +2464,8 @@
   "@unlock_decrypted_location": {},
   "unlock_remain_epoch": "解锁剩余: {remain}个纪元",
   "@unlock_remain_epoch": {},
+  "unstaking_next_epoch_effect_continue_yield": "撤销抵押需要等下一个纪元才能生效，期间可以继续享受出块收益回报",
+  "@unstaking_next_epoch_effect_continue_yield": {},
   "unsupported_image_formats_will_be_removed_selected_toast": "不支持的图片格式将被移除选中",
   "@unsupported_image_formats_will_be_removed_selected_toast": {},
   "update_error": "更新出错",
