--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -98,6 +98,8 @@
   "@add_share_options": {},
   "advanced_mode": "高級模式",
   "@advanced_mode": {},
+  "after_staking_next_epoch_income": "",
+  "@after_staking_next_epoch_income": {},
   "agree": "同意",
   "@agree": {},
   "agree_and_continue": "同意并继续",
@@ -486,6 +488,8 @@
   "@create_now": {},
   "create_or_import_wallet_first": "請先創建/導入錢包",
   "@create_or_import_wallet_first": {},
+  "create_start_map3_stake_atlas_reward": "",
+  "@create_start_map3_stake_atlas_reward": {},
   "create_time": "創建時間",
   "@create_time": {},
   "create_wallet": "創建新錢包",
@@ -2176,6 +2180,8 @@
   "@selecte_confirmed_position": {},
   "selected_area": "選擇地區",
   "@selected_area": {},
+  "select_map3_node_need_staking": "",
+  "@select_map3_node_need_staking": {},
   "select_picture": "選擇圖片",
   "@select_picture": {},
   "select_position": "選擇位置",
@@ -2274,8 +2280,14 @@
   "@spend_manager_hyn": {},
   "sponsor": "發起人",
   "@sponsor": {},
+  "stake_staked_map3_atlas_reward": "",
+  "@stake_staked_map3_atlas_reward": {},
   "staking": "抵押",
   "@staking": {},
+  "staking_atlas_need_unstaking_map3_follow_operation": "",
+  "@staking_atlas_need_unstaking_map3_follow_operation": {},
+  "staking_atlas_node": "",
+  "@staking_atlas_node": {},
   "start_encryption": "加密分享",
   "@start_encryption": {},
   "start_navigation_tips": "歡迎您使用海伯利安地圖，開始導航",
@@ -2452,6 +2464,8 @@
   "@unlock_decrypted_location": {},
   "unlock_remain_epoch": "解锁剩余: {remain}个纪元",
   "@unlock_remain_epoch": {},
+  "unstaking_next_epoch_effect_continue_yield": "",
+  "@unstaking_next_epoch_effect_continue_yield": {},
   "unsupported_image_formats_will_be_removed_selected_toast": "不支持的圖片格式將被移除選中",
   "@unsupported_image_formats_will_be_removed_selected_toast": {},
   "update_error": "更新出錯",
